deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        version: A
    spec:
      automountServiceAccountToken: false
      containers:
        - name: nginx
          image: pedrovieira249/nginx-ab:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
              ephemeral-storage: "128Mi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        version: B
    spec:
      automountServiceAccountToken: false
      containers:
        - name: nginx
          image: pedrovieira249/nginx-ab:b
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
              ephemeral-storage: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 80
      nodePort: 30000
