fault-injection.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx-virtual-service
spec:
  hosts: 
  - nginx-service
  http:
    - fault:
        # delay:
        #   fixedDelay: 10s
        #   percentage:
        #     value: 50
        abort:
          httpStatus: 504
          percentage:
            value: 100
      route:  
      - destination:
          host: nginx-service
          subset: all
---

apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: nginx-destination-rule
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "x-user"
  subsets:
    - name: all
      labels:
        app: nginx
